Revert "fix: Remove spacing around null SpaceBetween children (#832)"
This reverts commit d3bc9d025534c756f535ed7b2d8c6a552ec33dbe.

--- a/src/space-between/styles.scss
+++ b/src/space-between/styles.scss
@@ -50,8 +50,20 @@ $sizes-vertical: (
 
   @each $name, $size in $sizes-horizontal {
     &-#{$name} {
-      gap: $size;
+      // This cancels out the margins of the children in the first row / in the first column.
+      margin-left: calc(-1 * #{$size});
+      margin-bottom: calc(-1 * #{$size});
     }
+  }
+}
+
+@each $name, $size in $sizes-horizontal {
+  .child-horizontal-#{$name} {
+    margin-left: $size;
+    margin-bottom: $size;
+
+    // This is a fix for IE11. It prevents the content from overflowing.
+    min-width: 1px;
   }
 }
 
@@ -61,10 +73,10 @@ $sizes-vertical: (
 
 .vertical {
   flex-direction: column;
+}
 
-  @each $name, $size in $sizes-vertical {
-    &-#{$name} {
-      row-gap: $size;
-    }
+@each $name, $size in $sizes-vertical {
+  .child-vertical-#{$name}:not(:last-child) {
+    margin-bottom: $size;
   }
 }
